# kaku

./: Cargo.toml  justfile  openapi.yaml  specifications.md
db/: duckdb.sql  postgres.sql  snapshot.sql
src/: container.rs  lib.rs  main.rs
src/actor/: api_app.rs  mod.rs
src/adapter/: mod.rs  note_book.rs  project_book.rs  thought_book.rs
src/modele/: note.rs
src/models/: event.rs  mod.rs  note.rs  project.rs  stylo.rs  thought.rs
src/service/: thought.rs
tests/: notes.rs
