[package]
name = "kaku"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
axum = "0.8.1"
axum-test = "17.0.1"
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.11"
tokio = "1.43.0"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
