[package]
name = "kaku"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
axum = "0.8.1"
axum-test = "17.1.0"
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["net", "rt-multi-thread", "signal"] }
uuid = { version = "1.12.1", features = ["serde", "v4"] }
unidecode = "0.3.0"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.25"
synapps = "0.3.0"
